--- a/ai-service/pom.xml
+++ b/ai-service/pom.xml
@@ -92,7 +92,7 @@
             <artifactId>spring-ai-advisors-vector-store</artifactId>
             <version>${spring-ai.version}</version>
         </dependency>
-        
+
         <!-- Spring AI Document Reader -->
         <dependency>
             <groupId>org.springframework.ai</groupId>
@@ -110,6 +110,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
+            <version>2.15.2</version>
         </dependency>
         <dependency>
             <groupId>com.alibaba.fastjson2</groupId>
