--- a/ai-front-end/package.json
+++ b/ai-front-end/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.10.0",
     "element-plus": "^2.7.2",
+    "marked": "^16.1.1",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
